<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background4" >
    
    <RelativeLayout 
        android:id="@+id/dialog_title_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:paddingTop="2dp"
        android:paddingLeft="5dp"
        android:gravity="center_vertical"
        >
        <TextView
        android:id="@+id/dialog_delete_img" 
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/delete_choice"
        />
    
    <TextView 
        android:id="@+id/dialog_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/dialog_delete_img"
        android:textColor="@color/white_text"
        android:textSize="23sp"
        android:paddingLeft="10dp"/>
    </RelativeLayout>
    
    <TextView 
        android:id="@+id/dialog_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_title_rl"
        android:gravity="center"
        android:textColor="@color/white_text"
        android:textSize="18sp"
        android:text="@string/dialog_tips"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>
    
    <TextView 
        android:id="@+id/dialog_cancel"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textColor="@color/white_text"
        android:textSize="20sp"
        android:text="@string/cancel"
        android:background="@drawable/kg_mv_volume_bg"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="5dp"/>
    
    <LinearLayout 
        android:id="@+id/music_play_more_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:visibility="invisible">
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView 
                android:id="@+id/tv_background_setting"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/setting_background"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textColor="@color/white_text"
                android:textSize="20sp"
                android:text="@string/background_setting"/>
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/music_del_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="invisible">
            <TextView 
                android:id="@+id/del_list"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:textColor="@color/white_text"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/del_list"
                android:background="@drawable/music_zone_tag_bg_4"/>
            <TextView
                android:id="@+id/del_local" 
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/white_text"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/del_local"
                android:background="@drawable/music_zone_tag_bg_4"/>
    </LinearLayout>

</RelativeLayout>