<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <LinearLayout
    android:layout_width="350dp"
    android:layout_height="200dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:orientation="vertical"
    android:background="@drawable/setting_feedback_option_f">
    <LinearLayout
       android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginLeft="10dp">
      <TextView
      	android:textSize="20sp"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:textColor="@color/gray_text"
      	android:text="@string/tips"
      	android:clickable="false"/>
    </LinearLayout>
      
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:gravity="center">  
       
       <TextView
      	android:id="@+id/dialog_title"
      	 android:layout_width="wrap_content"
     	 android:layout_height="wrap_content"
      	android:textSize="25sp"
      	android:textColor="@color/white_text"
        android:clickable="false"/>
      </LinearLayout>
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="50dp"
      android:layout_marginTop="40dp"
      android:gravity="center"
      >  
      <TextView
        android:id="@+id/dialog_enter"
         android:layout_width="80dp"
      	android:layout_height="40dp"
        android:textSize="25sp"
      	android:text="@string/enter"
      	android:gravity="center"
      	android:textColor="@color/black"
      	android:background="@drawable/short_pause_poster_focus"
      	android:clickable="true"
        />
      <TextView
        android:id="@+id/dialog_cancle"
         android:layout_width="80dp"
      android:layout_height="40dp"
      android:layout_marginLeft="30dp"
         android:textSize="25sp"
       android:text="@string/cancel"
       android:gravity="center"
        android:textColor="@color/black"
         android:background="@drawable/short_pause_poster_focus"
          android:clickable="true"
        />
      </LinearLayout>
        
    </LinearLayout>
</LinearLayout> 
