<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_music_play"  
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <TextView
        android:id="@+id/music_play_top_id"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="10dp"
        android:background="@drawable/back_normal" />
    
    <TextView
        android:id="@+id/music_play_top_more_info"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:background="@drawable/setting_background" />
    
     <LinearLayout 
         android:id="@+id/music_play_info"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:layout_marginTop="10dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:orientation="vertical">
       
         <com.activity.view.MarqueeTextView
             android:id="@+id/music_play_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white_text"
             android:textSize="20sp"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"
             android:text="@string/song"/>
         <TextView 
             android:id="@+id/music_play_singer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white_text"
             android:textSize="17sp"
             android:paddingTop="5dp"
             android:singleLine="true"
             android:text="@string/singer"/>
         
     </LinearLayout>
     
     <LinearLayout 
         android:id="@+id/music_info_linearlayout"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_centerInParent="true"
         android:orientation="vertical"
         android:background="@drawable/background4"
         android:visibility="invisible">
         <TextView 
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:gravity="center"
             android:textColor="@color/white_text"
             android:textSize="20sp"
             android:text="@string/music_info"/>
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
             android:gravity="center_vertical"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:orientation="horizontal">
         <TextView 
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:textColor="@color/white_text"
             android:textSize="18sp"
             android:text="@string/music_name"/>
         <com.activity.view.MarqueeTextView
             android:id="@+id/music_info_song_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white_text"
             android:textSize="18sp"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"/>
         </LinearLayout>
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:gravity="center_vertical"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:orientation="horizontal">
             <TextView 
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:textColor="@color/white_text"
             android:textSize="18sp"
             android:text="@string/singer_name"/>
         <com.activity.view.MarqueeTextView
             android:id="@+id/music_info_singer_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white_text"
             android:textSize="18sp"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"/>
         </LinearLayout>
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:gravity="center_vertical"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:orientation="horizontal">
             <TextView 
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:textColor="@color/white_text"
             android:textSize="18sp"
             android:text="@string/music_duration"/>
         <com.activity.view.MarqueeTextView
             android:id="@+id/music_info_song_duration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white_text"
             android:textSize="18sp"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"/>
         </LinearLayout>
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:gravity="center_vertical"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:orientation="horizontal">
             <TextView 
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:textColor="@color/white_text"
             android:textSize="18sp"
             android:text="@string/song_album"/>
         <ImageView
             android:id="@+id/music_info_song_album"
             android:layout_width="50dp"
             android:layout_height="50dp"/>
         </LinearLayout>
         <LinearLayout 
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:gravity="center_vertical"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:orientation="horizontal">
             <TextView 
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:textColor="@color/white_text"
             android:textSize="18sp"
             android:text="@string/music_path"/>
         <com.activity.view.MarqueeTextView
             android:id="@+id/music_info_song_path"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white_text"
             android:textSize="18sp"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"/>
         </LinearLayout>
         
         
     </LinearLayout>
    
      <com.activity.view.LyricView
		     android:id="@+id/LyricShow" 
		     android:layout_width="fill_parent"
		     android:layout_height="330dp"
		     android:layout_below="@id/music_play_info"  
		     android:gravity="center"
		     android:paddingTop="15dp"
		     android:paddingLeft="20dp"
		     android:paddingRight="20dp"
             android:visibility="invisible">
	    </com.activity.view.LyricView>
	    
      <ImageView
             android:id="@+id/music_play_change"
             android:layout_width="330dp"
             android:layout_height="330dp"
             android:layout_below="@id/music_play_info"
             android:paddingTop="20dp"
             android:layout_centerHorizontal="true"
		     android:gravity="center"/>
     
      <RelativeLayout
            android:id="@+id/music_play_select"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/music_play_info"
            android:gravity="center_vertical"
            android:layout_marginTop="370dp">
          
          <TextView 
             android:id="@+id/music_play_voice"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginLeft="10dp"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
			 android:background="@drawable/ic_player_menu_volume"/>
          
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">
                <TextView
		             android:id="@+id/music_select_first"
		             android:layout_width="20dp"
		             android:layout_height="20dp"
		             android:background="@drawable/btn_radio_on"/>
        
             <TextView
		             android:id="@+id/music_select_second"
		             android:layout_width="20dp"
		             android:layout_height="20dp"
		             android:layout_marginLeft="10dp"
		             android:background="@drawable/btn_radio_off"/>
            </LinearLayout>
            
            <TextView 
             android:id="@+id/music_info"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginRight="10dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
			 android:background="@drawable/control_pre_normal"/>
             
        </RelativeLayout>
      
      <com.activity.view.VisualizerView
                android:id="@+id/music_play_visualizer"
                android:layout_width="230dip"
                android:layout_height="100dip"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/music_play_info"
                android:layout_marginTop="10dp"
                android:visibility="invisible" />
      
      <LinearLayout
           android:id="@+id/voice_linearlayout" 
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_below="@id/music_play_info"
           android:paddingLeft="5dp"
           android:paddingRight="5dp"
           android:layout_marginTop="340dp"
           android:orientation="horizontal"
           android:gravity="center_vertical"
           android:background="#80808080"
           android:visibility="invisible">
           <TextView
             android:id="@+id/voice_reduce"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:background="@drawable/ring_make_sub_enable"/>
         
         <SeekBar
             android:id="@+id/voice_seekBar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.0"/>
         
         <TextView
             android:id="@+id/voice_add"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:background="@drawable/ring_make_add_enable"/>
      </LinearLayout>
      
     <LinearLayout
         android:id="@+id/music_play_seekbar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/music_play_select"
         android:gravity="center"
         android:paddingTop="20dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:orientation="horizontal" >

         <TextView
             android:id="@+id/music_start_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white_text"
             android:textSize="15sp"
             android:text="00:00"/>
         
         <SeekBar
		        android:id="@+id/music_play_seekBar"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1.0"/>
         
         <TextView
             android:id="@+id/music_finish_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white_text"
             android:textSize="15sp"
             android:text="04:25"/>
     </LinearLayout>

     <ListView  
        android:id="@+id/play_mode_list"  
        android:layout_width="100dp"  
        android:layout_height="160dp" 
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" 
        android:background="@drawable/background4"
        android:scrollbars="none"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="65dp"
        android:visibility="invisible">  
    </ListView>
    
     <LinearLayout
         android:id="@+id/music_play_control"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_below="@id/music_play_seekbar"
         android:gravity="center"
         android:orientation="horizontal">
         
         <TextView
             android:id="@+id/music_play_mode"
             android:layout_width="45dp"
             android:layout_height="75dp"
             android:textIsSelectable="true"
             android:background="@drawable/player_mode_normal_normal"/>
         
         <TextView
             android:id="@+id/music_play_pre"
             android:layout_width="45dp"
             android:layout_height="75dp"
             android:layout_marginLeft="20dp"
             android:textIsSelectable="true"
             android:background="@drawable/player_previous_normal"/>
         
         <TextView
             android:id="@+id/music_play_playing"
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:layout_marginLeft="20dp"
             android:textIsSelectable="true"
             android:background="@drawable/player_pause_normal"/>
         
         <TextView
             android:id="@+id/music_play_next"
             android:layout_width="45dp"
             android:layout_height="75dp"
             android:layout_marginLeft="20dp"
             android:textIsSelectable="true"
             android:background="@drawable/player_next_normal"/>
         
         <TextView
             android:id="@+id/music_play_favorite"
             android:layout_width="45dp"
             android:layout_height="75dp"
             android:layout_marginLeft="20dp"
             android:textIsSelectable="true"
             android:gravity="center"
             android:background="@drawable/player_favorite_normal"/>
         
     </LinearLayout>

     <ImageView
        android:id="@+id/music_play_iv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/player_img_favorite"
        android:visibility="invisible" />
</RelativeLayout>